--- a/style.css
+++ b/style.css
@@ -13,21 +13,19 @@ background: linear-gradient(to right, #BD3F32, #CB356B); /* W3C, IE 10+/ Edge, F
     background-color: #3498db;
     margin: auto;
     text-align: center;
-    width: 200px;
-    border-radius: 10px;
-
-
-    padding:10px 5px;
+    width: 300px;
+    /* height: 370px; */
+    padding: 50px 10px;
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%,-50%);
 }
 input{
-    width: 40px;
-    height: 30px;
+    width: 61px;
+    height: 36px;
     border-radius: 10px;
 }
 #clear{
-    width: 130px;
+    width: 200px;
 }
