--- a/style.css
+++ b/style.css
@@ -16,16 +16,26 @@ background: linear-gradient(to right, #BD3F32, #CB356B); /* W3C, IE 10+/ Edge, F
     width: 300px;
     /* height: 370px; */
     padding: 50px 10px;
+    border-radius: 10px;
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%,-50%);
+
+    box-shadow:         -2px 4px 12px 0px rgba(50, 50, 50, 0.87);
 }
 input{
     width: 61px;
-    height: 36px;
+    height: 40px;
     border-radius: 10px;
+    font-size: 22px;
+
+}
+input:hover{
+    background-color: rgb(194, 188, 188);
 }
 #clear{
     width: 200px;
+    padding: 5px;
+    font-size: 22px;
 }
